send and recieve directions with basic ui

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.2.+'
     compile project(path: ':google-maps-services-java-master')
+    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.android.support:design:25.3.1'
 }
